@@ -1,6 +1,6 @@
 #!./perl
 
-# $Id: retrieve.t,v 0.4 1997/01/15 18:20:12 ram Exp $
+# $Id: retrieve.t,v 0.4.1.1 1997/03/25 10:21:14 ram Exp $
 #
 #  Copyright (c) 1995-1997, Raphael Manfredi
 #  
@@ -8,6 +8,9 @@
 #  as specified in the README file that comes with the distribution.
 #
 # $Log: retrieve.t,v $
+# Revision 0.4.1.1  1997/03/25  10:21:14  ram
+# patch5: new test to ensure an empty string is defined when retrieved
+#
 # Revision 0.4  1997/01/15  18:20:12  ram
 # Baseline for fourth netwide alpha release.
 #
@@ -16,14 +19,14 @@ require 't/dump.pl';
 
 use Storable qw(store retrieve nstore);
 
-print "1..7\n";
+print "1..9\n";
 
 $a = 'toto';
 $b = \$a;
 $c = bless {}, CLASS;
 $c->{attribute} = 'attrval';
 %a = ('key', 'value', 1, 0, $a, $b, 'cvar', \$c);
-@a = ('first', undef, 3, -4, -3.14159, 456, 4.5,
+@a = ('first', '', undef, 3, -4, -3.14159, 456, 4.5,
 	$b, \$a, $a, $c, \$c, \%a);
 
 print "not " unless defined store(\@a, 't/store');
@@ -46,6 +49,12 @@ print "ok 6\n";
 
 print "not " unless $d1 eq $d2; 
 print "ok 7\n";
+
+# Make sure empty string is defined at retrieval time
+print "not " unless defined $root->[1];
+print "ok 8\n";
+print "not " if length $root->[1];
+print "ok 9\n";
 
 unlink 't/store', 't/nstore';
 
